[gd_scene load_steps=5 format=3 uid="uid://b82mdtm7gb5iu"]

[ext_resource type="Script" uid="uid://ciq7wgyhld3mm" path="res://shared/scripts/system/zone_map.gd" id="1_by6oa"]
[ext_resource type="Script" uid="uid://cf8clwi6ap1n8" path="res://server/scripts/system/entity_spawner.gd" id="2_36rj6"]

[sub_resource type="World3D" id="World3D_bw5j1"]

[sub_resource type="BoxShape3D" id="BoxShape3D_36rj6"]
size = Vector3(1000, 100, 1000)

[node name="ZoneMapBase" type="SubViewport"]
own_world_3d = true
world_3d = SubResource("World3D_bw5j1")
audio_listener_enable_3d = true
script = ExtResource("1_by6oa")

[node name="MapArea" type="Area3D" parent="."]
input_ray_pickable = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="MapArea"]
shape = SubResource("BoxShape3D_36rj6")

[node name="EntitySpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("../DynamicEntities")
script = ExtResource("2_36rj6")

[node name="DynamicEntities" type="Node" parent="."]

[node name="Map" type="Node" parent="."]

[node name="EntryPoints" type="Node" parent="Map"]
